# swift_theme

./: MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
swift_theme/: hooks.py  install.py  modules.txt
swift_theme/api/: boot.py
swift_theme/config/: desktop.py
swift_theme/public/css/: swift-accents.css  swift-base.css  swift-core.css  swift-density.css  swift-desk.css  swift-fonts.css  swift-layout.css  swift-login.css  swift-perf.css  swift-print.css  swift-scrollbar.css  swift-themes.css  swift-toast.css  swift-website.css
swift_theme/public/fonts/: README.txt
swift_theme/public/js/: swift-boot.js  swift-boot.js:Zone.Identifier  swift-focus.js  swift-mode-observer.js  swift-palette.js  swift-perf.js  swift-sidebar.js  swift-switcher.js  swift-theme-switcher.js  swift-website.js
swift_theme/public/presets/: enterprise.json  neon.json
swift_theme/swift_theme/doctype/: __init__.py:Zone.Identifier
swift_theme/swift_theme/doctype/swift_theme_settings/: swift_theme_settings.js  swift_theme_settings.json  swift_theme_settings.py
swift_theme/templates/includes/: splash.html
