[project]
name = "swift_theme"
authors = [
    { name = "MuleRun", email = "hello@mulerun.com"}
]
description = "Swift Theme - Fast, multi-scheme theme for Frappe v16 (Desk, Portal, Login)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "swift_theme"
